<resources>
    <string name="app_name">Term_Project</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="map_not_ready">map_not_ready</string>
    <string name="zoom_buttons">zoom_buttons</string>
    <string name="compass">compass</string>
    <string name="mylocation_button">mylocation_button</string>
    <string name="mylocation_layer">mylocation_layer</string>
    <string name="scroll">scroll</string>
    <string name="zoom_gestures">zoom_gestures</string>
    <string name="tilt">tilt</string>
    <string name="rotate">rotate</string>
</resources>